--- a/src/components/Galerie/GalerieItem.astro
+++ b/src/components/Galerie/GalerieItem.astro
@@ -37,8 +37,8 @@ import { Picture } from 'astro:assets';
     }
     .responsive {
         height: auto;
-        width: 95%;
-        margin: 2.5%;
+        width: fit-content;
+        margin: 1rem;
         border-radius: var(--border-radius);
         overflow: hidden;
     }
