--- a/src/components/Index/LandingLogo.astro
+++ b/src/components/Index/LandingLogo.astro
@@ -192,8 +192,9 @@
   }
   :root {
     --anim-delay: 0s;
-    --anim-time: 1s;
-    --anim-type: cubic-bezier(1, -2.31, 0.72, 1.15);
+    --anim-time: .2s;
+    --anim-type: cubic-bezier(0, 0, 0.34, 0.96);
+    --anim-path-delay: 0.05s;
   }
 
   svg {
@@ -203,8 +204,8 @@
     max-height: 60vh;
     max-height: 60svh;
     max-width: 800px;
-    animation: swipeUp var(--anim-time) cubic-bezier(0, 1.54, 1, 1)
-      calc(var(--anim-delay) + 2s) forwards;
+    animation: swipeUp var(--anim-time) var(--anim-type)
+      calc(var(--anim-delay) + var(--anim-path-delay) * 16) forwards;
   }
 
   #path8 {
@@ -213,70 +214,70 @@
   }
   #path7 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 0.1s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay)) forwards;
   }
   #path6 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 0.2s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 2) forwards;
   }
   #path5 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 0.3s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 3) forwards;
   }
   #path4 {
     animation: fadeDownLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 0.3s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 3) forwards;
   }
   #path3 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 0.4s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 4) forwards;
   }
   #path2 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 0.5s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 5) forwards;
   }
   #path1 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 0.6s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 6) forwards;
   }
   #path18 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 0.7s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 7) forwards;
   }
   #path17 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 0.8s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 8) forwards;
   }
   #path16 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 0.9s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 9) forwards;
   }
   #path15 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 1s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 10) forwards;
   }
   #path14 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 1.1s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 11) forwards;
   }
   #path13 {
     animation: fadeDownP var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 1.1s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 12) forwards;
   }
   #path12 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 1.2s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 13) forwards;
   }
   #path11 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 1.3s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 14) forwards;
   }
   #path10 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 1.4s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 15) forwards;
   }
   #path9 {
     animation: fadeInLogo var(--anim-time) var(--anim-type)
-      calc(var(--anim-delay) + 1.5s) forwards;
+      calc(var(--anim-delay) + var(--anim-path-delay) * 16) forwards;
   }
 </style>
