--- a/src/components/Index/OSM.astro
+++ b/src/components/Index/OSM.astro
@@ -44,7 +44,7 @@ import { Icon } from "astro-icon";
 
 <style>
   .diagonal {
-    padding-inline: 5vw;
+    padding-inline: 1rem;
     --skew-angle: 5deg;
     position: relative;
     isolation: isolate;
@@ -223,7 +223,6 @@ import { Icon } from "astro-icon";
 
   @media only screen and (max-width: 700px) {
     .diagonal {
-      padding-inline: 15px;
       padding-block: 7rem;
       margin-block: 7rem;
     }
