--- a/src/components/Index/Verlinkung.astro
+++ b/src/components/Index/Verlinkung.astro
@@ -22,7 +22,7 @@ const { href, label, classes } = Astro.props as Props;
     font-size: 1.2rem;
     font-weight: 600;
     opacity: 0;
-    animation: .5s cubic-bezier(0,1.54,1,1)  2.4s forwards slideup;
+    animation: .5s cubic-bezier(0, 0, 0.34, 0.96)  1s forwards slideup;
   }
   .primary button {
     background-color: var(--primary);
