--- a/src/components/Veranstaltungen/TermineGrid.astro
+++ b/src/components/Veranstaltungen/TermineGrid.astro
@@ -12,16 +12,10 @@
         border-radius: var(--border-radius);
         box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2),
             0 3px 20px 0 rgba(0, 0, 0, 0.19);
-        padding: 2%;
-        margin: 5% 10%;
-        width: 80%;
+        padding: .3rem;
+        margin: 1rem;
+        width: fit-content;
         max-width: 1400px;
         height: min-content;
-    }
-    @media screen and (max-width: 800px) {
-        .termineCard {
-            margin-inline: 2%;
-            width: 96%;
-        }
-    }
+    }   
 </style>
