--- a/src/pages/preise.astro
+++ b/src/pages/preise.astro
@@ -38,9 +38,6 @@ import MainLayout from "../layouts/MainLayout.astro";
     div {
         display: flex;
         justify-content: flex-end;
-    }
-    p {
-        margin-right: 16px;
-        margin-top: 20px;
+        margin: 1rem;
     }
 </style>
