--- a/src/pages/zeiten.astro
+++ b/src/pages/zeiten.astro
@@ -11,21 +11,16 @@ import MainLayout from "../layouts/MainLayout.astro";
   titel="Öffnungszeiten"
   description="Aktuelle Öffnungszeiten des Freibads Delligsen"
 >
-<Banner
-title="Freibad geschlossen"
-icon="IcRoundWarning"
-bg_color="neutral"
->
-Das Freibad ist bis zum Saisonstart geschlossen.
-</Banner>
-  <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! -->
-  <Banner
-    title="Bei schlechtem Wetter kann die Badezeit früher enden !!!"
-    icon="IcRoundRainy"
-    bg_color="error"
-  >
-  </Banner>
   <Grid titel="Öffnungszeiten">
+    <Banner title="Freibad geschlossen" icon="IcRoundWarning" bg_color="neutral">
+      Das Freibad ist bis zum Saisonstart geschlossen.
+    </Banner>
+    <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! -->
+    <Banner
+      title="Bei schlechtem Wetter kann die Badezeit früher enden !!!"
+      icon="IcRoundRainy"
+      bg_color="error"
+    />
     <Card titel="In der Schulzeit">
       <CardItem titel="Montag bis Freitag" content="15:00 - 20:00 Uhr" />
       <CardItem
@@ -56,6 +51,7 @@ Das Freibad ist bis zum Saisonstart geschlossen.
 
 <style>
   div {
+    margin: 1rem;
     display: flex;
     justify-content: flex-end;
   }
