--- a/src/components/Card/Card.astro
+++ b/src/components/Card/Card.astro
@@ -13,9 +13,9 @@ const { titel } = Astro.props;
     .card {
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
         padding: 16px;
-        margin: 3%;
+        margin: 1rem;
         border-radius: var(--border-radius);
-        width: 100%;
+        width: fit-content;
         max-width: 450px;
         height: 500px;
         display: grid;
