--- a/src/components/Kurse/Kurse.astro
+++ b/src/components/Kurse/Kurse.astro
@@ -75,7 +75,8 @@ import KurseItem from "./KurseItem.astro";
 
   .anmeldung {
     margin-top: 30px;
-    width: 100%;
+    width: fit-content;
+    margin-inline: 1rem;
     text-align: center;
   }
 
