--- a/src/components/Nav/NavItem.astro
+++ b/src/components/Nav/NavItem.astro
@@ -23,34 +23,35 @@ import { Icon } from "astro-icon";
   li {
     list-style: none;
   }
-  li:hover a{
+  li:hover a {
     color: var(--primary);
   }
   .active,
-  .active:hover{
+  .active:hover {
     color: white !important;
     background-color: var(--primary);
   }
   li:hover [astro-icon] {
     fill: var(--primary);
   }
-  .active [astro-icon] {
-    fill: white;
+  .active [astro-icon],
+  .active:hover [astro-icon] {
+    fill: white !important;
   }
   a {
-      /* no hyphens */
-  -moz-hyphens: none;
-  -o-hyphens: none;
-  -webkit-hyphens: none;
-  -ms-hyphens: none;
-  hyphens: none;
+    /* no hyphens */
+    -moz-hyphens: none;
+    -o-hyphens: none;
+    -webkit-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
     display: flex;
     flex-direction: row;
     border-radius: var(--border-radius);
     margin: 16px 5px;
-    padding: .7rem;
+    padding: 0.7rem;
     font-weight: 600;
-  font-size: 1.1rem;
+    font-size: 1.1rem;
     color: var(--text);
 
     text-decoration: none;
@@ -77,9 +78,6 @@ import { Icon } from "astro-icon";
     }
   }
   @media screen and (max-width: 1270px) {
-    li {
-      opacity: 0;
-    }
     a {
       margin-left: 24px;
       border-radius: 16px;
@@ -94,7 +92,6 @@ import { Icon } from "astro-icon";
       padding: 16px 16px;
       width: min-content;
       height: 60px;
-      opacity: 0;
     }
     a {
       background-color: rgba(255, 255, 255, 0);
@@ -110,7 +107,6 @@ import { Icon } from "astro-icon";
       padding: 16px 16px;
       width: min-content;
       height: 60px;
-      opacity: 0;
     }
 
     a {
