--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -36,7 +36,7 @@ const { title, icon, bg_color = "error" } = Astro.props as Props;
   div {
     font-size: larger;
     color: var(--text);
-    width: fit-content;
+    width: 100%;
     padding: 3% 5%;
     margin: 1rem;
     text-wrap: balance;
