--- a/src/components/Card/Card.astro
+++ b/src/components/Card/Card.astro
@@ -15,7 +15,7 @@ const { titel } = Astro.props;
         padding: 16px;
         margin: 1rem;
         border-radius: var(--border-radius);
-        width: fit-content;
+        width: 100%;
         max-width: 450px;
         height: 500px;
         display: grid;
