--- a/src/components/Nav/NavigationBar.astro
+++ b/src/components/Nav/NavigationBar.astro
@@ -75,7 +75,7 @@ const currentPath = pathname.split("/");
         display: flex;
         justify-content: space-around;
         width: 30%;
-        transition: all 0.3s ease;
+        transition: all 0.2s ease-in-out;
     }
 
     /*Burger*/
@@ -113,15 +113,14 @@ const currentPath = pathname.split("/");
             background-color: white;
             border-top-left-radius: var(--border-radius);
             border-end-start-radius: var(--border-radius);
-            display: flex;
             flex-direction: column;
             align-items: flex-start;
             gap: 1rem;
             padding: 1rem;
             width: 300px;
             box-shadow: var(--nav-shadow);
-            transform: translateX(100%);
-            transition: transform 0.3s ease-in-out;
+            transform: translateX(110%) rotateY(135deg);
+            opacity: 0.9;
         }
         .burger {
             display: block;
@@ -144,9 +143,9 @@ const currentPath = pathname.split("/");
             align-items: center;
             width: 100%;
             box-shadow: none;
-            transform: translateX(100%) rotateY(135deg);
-            transition: all 0.25s ease-in-out;
             padding-bottom: 8vh;
+            transform: translateX(100%) rotateY(135deg);
+            opacity: 0.9;
         }
     }
 
@@ -168,20 +167,14 @@ const currentPath = pathname.split("/");
             right: 0px;
             height: 92vh;
             top: 8vh;
-            border-radius: 0px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            transform: translateX(100%);
-            transition: transform 0.5s ease-in;
         }
     }
 
     /* Menu Animationen */
 
     .nav-active {
-        transform: translateX(0%) rotateY(0deg);;
+        transform: translateX(0%) rotateY(0deg);
+        opacity: 1;
     }
 
     @keyframes navLinkFade {
