--- a/src/components/Accordion/Accordion.astro
+++ b/src/components/Accordion/Accordion.astro
@@ -68,6 +68,7 @@ import Volleyball from "@assets/images/accordion/Volleyball.jpg";
     background-color: var(--bg-color);
     display: flex;
     justify-content: center;
+    width: 100%;
   }
 
   .accordion {
