--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -106,10 +106,8 @@ import { Icon } from "astro-icon";
 
   .footerDiv {
     text-align: center;
-    margin: 1rem;
-    border-radius: var(--border-radius);
     background-color: var(--secondary);
-    margin-top: 50px;
+    margin-top: 3rem;
   }
 
   .social,
