--- a/src/components/Neues/PostCard.astro
+++ b/src/components/Neues/PostCard.astro
@@ -30,7 +30,7 @@ const { img, titel, pubDate, description, href, width, height } = Astro.props;
 <style>
     .grid {
         margin-inline: auto;
-        margin-block: 2rem;
+        margin-bottom: 2rem;
         width: 100%;
         max-width: var(--site-width);
         display: grid;
