--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import Accordion from "../components/Accordion/Accordion.astro";
 import OSM from "../components/Index/OSM.astro";
 import Verlinkung from "../components/Index/Verlinkung.astro";
-import SvgWindow from "../components/Index/SvgWindow.astro";
 import Kurse from "../components/Kurse/Kurse.astro";
 import LandingLogo from "../components/Index/LandingLogo.astro";
 import MainLayout from "../layouts/MainLayout.astro";
@@ -31,7 +30,7 @@ import Countdown from "../components/Countdown.astro";
      -->
 
   <Accordion />
-  <OSM />
+  <OSM className="full-width"/>
   <Kurse />
 </MainLayout>
 
