--- a/src/components/Veranstaltungen/TermineGrid.astro
+++ b/src/components/Veranstaltungen/TermineGrid.astro
@@ -13,9 +13,9 @@
         box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2),
             0 3px 20px 0 rgba(0, 0, 0, 0.19);
         padding: .3rem;
-        margin: 1rem;
         width: 100%;
         max-width: var(--site-width);
         height: min-content;
+        min-height: 500px;
     }   
 </style>
