--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -8,57 +8,34 @@ import Back from "../components/Back.astro";
 
 type Props = CollectionEntry<"neues">["data"];
 
-const {
-  title,
-  description,
-  pubDate,
-  updatedDate,
-  src,
-  width,
-  height,
-} = Astro.props;
+const { title, description, pubDate, updatedDate, src, width, height } =
+  Astro.props;
 ---
 
 <MainLayout titel={title} description={description}>
-  <main class="transition-main">
-    <article>
-      <div class="content">
-        <div>
-          <h1 class="title">{title}</h1>
-          <FormattedDate date={pubDate} />
-          {
-            updatedDate && (
-              <div class="last-updated-on">
-                Last updated on <FormattedDate date={updatedDate} />
-              </div>
-            )
-          }
-        </div>
-
+  <article>
+    <div class="content">
+      <div>
+        <h1 class="title">{title}</h1>
+        <FormattedDate date={pubDate} />
         {
-          src && (
-            <BlogImage
-              src={src}
-              alt={src}
-              width={width}
-              height={height}
-            />
+          updatedDate && (
+            <div class="last-updated-on">
+              Last updated on <FormattedDate date={updatedDate} />
+            </div>
           )
         }
-        <div class="slot">
-          <slot />
-        </div>
       </div>
-      <Back url="javascript:history.back()" txt="Übersicht" />
-    </article>
-  </main>
+
+      {src && <BlogImage src={src} alt={src} width={width} height={height} />}
+      <div class="slot">
+        <slot />
+      </div>
+    </div>
+    <Back url="javascript:history.back()" txt="Übersicht" />
+  </article>
 </MainLayout>
 <style>
-  main {
-    display: flex;
-    justify-content: center;
-    padding-top: 30px;
-  }
   .button {
     display: flex;
     justify-content: flex-end;
@@ -81,12 +58,13 @@ const {
     display: grid;
     justify-content: center;
     max-width: 800px;
-    width: 200vw;
+    width: 100%;
     height: fit-content;
     gap: 30px;
     padding: 4%;
     border-radius: var(--border-radius);
     border: var(--border-grey) 1px solid;
+    margin-inline: auto;
   }
   @media screen and (max-width: 1050px) {
     article {
