--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -6,7 +6,7 @@ import "../styles/global.css";
 import NavigationBar from "../components/Nav/NavigationBar.astro";
 import Footer from "../components/Footer.astro";
 
-import { ViewTransitions } from 'astro:transitions';
+import { ViewTransitions } from "astro:transitions";
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
@@ -16,7 +16,11 @@ export interface Props {
 	image?: string;
 }
 
-const { titel, description, image = "../assets/images/Sprungturm2.jpg" } = Astro.props;
+const {
+	titel,
+	description,
+	image = "../assets/images/Sprungturm2.jpg",
+} = Astro.props;
 ---
 
 <html lang="de">
@@ -64,41 +68,41 @@ const { titel, description, image = "../assets/images/Sprungturm2.jpg" } = Astro
 	<body>
 		<div class="top_div dontPrint"></div>
 		<header class="dontPrint">
-			<NavigationBar />
+			<NavigationBar/>
 		</header>
 		<main id="swup">
-			<div class="slot transition-fade">
+			<div class="slot transition-fade content-grid">
 				<slot />
 			</div>
 		</main>
 		<div class="dontPrint">
 			<Footer />
 		</div>
+		<script src="../js/app.js"></script>
 	</body>
-	<script src="../js/app.js"></script>
-</html>
-<style>
-	.slot {
-		width: 100%;
-		min-height: 80vh;
-	}
-	body {
-		background-color: var(--background);
-	}
-	/* Define a transition duration during page visits */
-	html.is-changing .transition-fade {
-		transition: opacity 0.25s;
-		opacity: 1;
-	}
-
-	/* Define the styles for the unloaded pages */
-	html.is-animating .transition-fade {
-		opacity: 0;
-	}
-
-	@media print {
-		.dontPrint {
-			display: none;
+	<style>
+		.slot {
+			width: 100%;
+			min-height: 80vh;
 		}
-	}
-</style>
+		body {
+			background-color: var(--background);
+		}
+		/* Define a transition duration during page visits */
+		html.is-changing .transition-fade {
+			transition: opacity 0.25s;
+			opacity: 1;
+		}
+
+		/* Define the styles for the unloaded pages */
+		html.is-animating .transition-fade {
+			opacity: 0;
+		}
+
+		@media print {
+			.dontPrint {
+				display: none;
+			}
+		}
+	</style>
+</html>
