--- a/src/pages/zeiten.astro
+++ b/src/pages/zeiten.astro
@@ -19,12 +19,12 @@ import MainLayout from "../layouts/MainLayout.astro";
   >
     Das Freibad ist bis zum Saisonstart geschlossen.
   </Banner>
-  <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! -->
+  <!--Bei schlechtem Wetter kann die Badezeit früher enden !!! 
   <Banner
     title="Bei schlechtem Wetter kann die Badezeit früher enden !!!"
     icon="IcRoundRainy"
     bg_color="error"
-  />
+  />-->
     <Card titel="In der Schulzeit">
       <CardItem titel="Montag bis Freitag" content="15:00 - 20:00 Uhr" />
       <CardItem
