--- a/src/components/Nav/NavigationBar.astro
+++ b/src/components/Nav/NavigationBar.astro
@@ -1,28 +1,63 @@
 ---
-import { Icon } from 'astro-icon';
-import NavItem from './NavItem.astro';
+import { Icon } from "astro-icon";
+import NavItem from "./NavItem.astro";
 
 const pathname = new URL(Astro.request.url).pathname;
 const currentPath = pathname.split("/");
-const {className} = Astro.props;
-
+const { className } = Astro.props;
 ---
+
 <nav id="homeNav" class={`${className}`}>
     <a class="noLink" href="/">
         <div class="logo">
-            <Icon name="freibadLogo"/>
+            <Icon name="freibadLogo" />
             <h4>Freibad Delligsen</h4>
         </div>
     </a>
     <ul class="nav-links">
-        <NavItem title="Startseite" url="" current={currentPath[1]} icon="home"/>
-        <NavItem title="&Ouml;ffnungszeiten" url="zeiten" current={currentPath[1]} icon="time"/>
-        <NavItem title="Eintrittspreise" url="preise" current={currentPath[1]} icon="pay"/>
-        <NavItem title="Veranstaltungen" url="veranstaltungen" current={currentPath[1]} icon="date"/>
-        <NavItem title="Neuigkeiten" url="neues" current={currentPath[1]} icon="news"/>
-        <NavItem title="Galerie" url="galerie" current={currentPath[1]} icon="gallery"/>
+        <NavItem
+            title="Startseite"
+            url=""
+            current={currentPath[1]}
+            icon="home"
+        />
+        <NavItem
+            title="Öffnungszeiten"
+            url="zeiten"
+            current={currentPath[1]}
+            icon="time"
+        />
+        <NavItem
+            title="Eintrittspreise"
+            url="preise"
+            current={currentPath[1]}
+            icon="pay"
+        />
+        <NavItem
+            title="Veranstaltungen"
+            url="veranstaltungen"
+            current={currentPath[1]}
+            icon="date"
+        />
+        <NavItem
+            title="Neuigkeiten"
+            url="neues"
+            current={currentPath[1]}
+            icon="news"
+        />
+        <NavItem
+            title="Galerie"
+            url="galerie"
+            current={currentPath[1]}
+            icon="gallery"
+        />
     </ul>
-    <div class="burger" aria-label="Menu öffnen" aria-controls="nav-links" aria-expanded="false">
+    <div
+        class="burger"
+        aria-label="Menu öffnen"
+        aria-controls="nav-links"
+        aria-expanded="false"
+    >
         <div class="line1"></div>
         <div class="line2"></div>
         <div class="line3"></div>
@@ -31,16 +66,11 @@ const {className} = Astro.props;
 
 <style>
     nav {
-        position: fixed;
         z-index: 999;
         top: 0;
-        width: 100%;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         align-items: center;
-        background-color: var(--nav-bg-color);
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px);
         min-height: 7rem;
         max-height: 10px;
         transition: all 0.3s ease-in;
@@ -62,7 +92,6 @@ const {className} = Astro.props;
         width: 50px !important;
     }
 
-
     .logo h4 {
         color: var(--primary-dark);
         font-size: 18pt;
@@ -75,7 +104,6 @@ const {className} = Astro.props;
     .nav-links {
         display: flex;
         justify-content: space-around;
-        width: 30%;
         transition: all 0.2s ease-in-out;
     }
 
@@ -92,12 +120,6 @@ const {className} = Astro.props;
         margin: 3px;
         border-radius: 2px;
         transition: all 0.3s ease;
-    }
-
-    @media screen and (max-width: 1600px) {
-        .nav-links {
-            width: 60%;
-        }
     }
 
     @media screen and (max-width: 1270px) {
@@ -198,7 +220,6 @@ const {className} = Astro.props;
         to {
             opacity: 0;
             transform: translateX(50px);
-
         }
     }
 
