--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
   --test4: hsl(210.65, 61.33%, 70.59%);
   --test5: hsl(215.32, 51.67%, 52.94%);
 
-  
+
   --text: #000000;
   --background: white;
   --primary: #235fa4;
@@ -35,12 +35,9 @@
 
   --accent-color3: #f3e99f;
   --accent-color4: #ff6d60;
-  --filter-blue: brightness(0) saturate(100%) invert(31%) sepia(35%)
-    saturate(727%) hue-rotate(168deg) brightness(92%) contrast(97%);
-  --filter-white: brightness(0) saturate(100%) invert(100%) sepia(100%)
-    saturate(1%) hue-rotate(45deg) brightness(109%) contrast(101%);
-  --filter-light-blue: brightness(0) saturate(100%) invert(90%) sepia(11%)
-    saturate(420%) hue-rotate(166deg) brightness(100%) contrast(94%);
+  --filter-blue: brightness(0) saturate(100%) invert(31%) sepia(35%) saturate(727%) hue-rotate(168deg) brightness(92%) contrast(97%);
+  --filter-white: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(1%) hue-rotate(45deg) brightness(109%) contrast(101%);
+  --filter-light-blue: brightness(0) saturate(100%) invert(90%) sepia(11%) saturate(420%) hue-rotate(166deg) brightness(100%) contrast(94%);
   --nav-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.548);
   --bg-color: var(--background);
   --accent-color2: brown;
@@ -78,6 +75,7 @@
 html {
   scroll-behavior: smooth;
 }
+
 [astro-icon="freibadLogo"] ellipse {
   fill: var(--primary) !important;
 }
@@ -102,7 +100,10 @@ body {
   overflow-x: hidden;
 }
 
-h1,h2,h3,h4 {
+h1,
+h2,
+h3,
+h4 {
   line-height: normal;
   text-wrap: balance;
 }
@@ -112,16 +113,16 @@ h1,h2,h3,h4 {
   height: calc(var(--navbar-height) + 2rem);
 }
 
-nav.sticking {
+header.sticking {
   transition: all 0.3s ease-in-out;
   box-shadow: none !important;
 }
 
-nav.notSticking {
+header.notSticking {
   background-color: var(--nav-bg-color);
   box-shadow: var(--nav-shadow), 0 -9px white;
-  backdrop-filter: blur(10px);
 }
+
 .solidWhite {
   background-color: white !important;
 }
@@ -149,6 +150,7 @@ nav.notSticking {
   transform: scaleX(0);
   transition: transform 300ms ease-in-out;
 }
+
 .active::after {
   transform: scaleX(1);
 }
@@ -159,47 +161,38 @@ nav.notSticking {
 }
 
 
-		/* Content Grid */
-		.content-grid {
-			--padding-inline: 1rem;
-			--content-max-width: 80rem;
-			--breakout-max-width: 85rem;
+/* Content Grid */
+.content-grid {
+  --padding-inline: 1rem;
+  --content-max-width: 80rem;
+  --breakout-max-width: 85rem;
 
-			--breakout-size: calc(
-				(var(--breakout-max-width) - var(--content-max-width)) / 2
-			);
+  --breakout-size: calc((var(--breakout-max-width) - var(--content-max-width)) / 2);
 
-			display: grid;
-			grid-template-columns:
-				[full-width-start] minmax(var(--padding-inline), 1fr)
-				[breakout-start] minmax(0, var(--breakout-size))
-				[content-start] min(
-					100% - (var(--padding-inline) * 2),
-					var(--content-max-width)
-				)
-				[content-end]
-				minmax(0, var(--breakout-size)) [breakout-end]
-				minmax(var(--padding-inline), 1fr) [full-width-end];
-		}
+  display: grid;
+  grid-template-columns:
+    [full-width-start] minmax(var(--padding-inline), 1fr) [breakout-start] minmax(0, var(--breakout-size)) [content-start] min(100% - (var(--padding-inline) * 2),
+      var(--content-max-width)) [content-end] minmax(0, var(--breakout-size)) [breakout-end] minmax(var(--padding-inline), 1fr) [full-width-end];
+}
 
-		.content-grid > :not(.breakout, .full-width),
-		.full-width > :not(.breakout, .full-width) {
-			grid-column: content;
-		}
+.content-grid> :not(.breakout, .full-width),
+.full-width> :not(.breakout, .full-width) {
+  grid-column: content;
+}
 
-		.content-grid > .breakout {
-			grid-column: breakout;
-		}
+.content-grid>.breakout {
+  grid-column: breakout;
+}
 
-		.content-grid > .full-width {
-			grid-column: full-width;
+.content-grid>.full-width {
+  grid-column: full-width;
 
-			display: grid;
-			grid-template-columns: inherit;
-		}
+  display: grid;
+  grid-template-columns: inherit;
+}
 
-		img.full-width {
-			width: 100%;
-			max-height: 45vh;
-			object-fit: cover;
-		}
+img.full-width {
+  width: 100%;
+  max-height: 45vh;
+  object-fit: cover;
+}
