--- a/src/components/Grid.astro
+++ b/src/components/Grid.astro
@@ -47,7 +47,7 @@ const { titel } = Astro.props;
   h1 {
     width: fit-content;
     height: fit-content;
-    font-size: 2.5em;
+    font-size: clamp(2rem, 1.4551rem + 1.3061vw, 2.5rem);
     font-weight: 400;
     margin-block: 3rem;
   }
