--- a/src/components/Index/OSM.astro
+++ b/src/components/Index/OSM.astro
@@ -81,6 +81,7 @@ const { className } = Astro.props;
     );
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     height: 70vh;
+    height: 70svh;
     bottom: 0px;
     display: grid;
     grid-template-areas: "panelContent panelContentGrid";
@@ -113,7 +114,7 @@ const { className } = Astro.props;
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
-    height: 70vh;
+    height: 100%;
     border-radius: var(--border-radius);
     position: relative;
   }
