--- a/src/components/Kurse/Kurse.astro
+++ b/src/components/Kurse/Kurse.astro
@@ -5,47 +5,45 @@ import KurseItem from "./KurseItem.astro";
 ---
 
 <section>
-  <div class="titelh2">
-    <h2><span>Schwimmkurse</span> im Freibad Delligsen</h2>
-  </div>
-  <div class="HomeWhite">
-    <!--Seepferd -->
-    <KurseItem titel="Seepferdchen" svg="seepferd" id="1">
-      <KurseEntries h3="Gruppengröße:" p="max. 8 Kinder" />
-      <KurseEntries h3="Alter der Kinder:" p="ab 6 Jahren" />
-      <KurseEntries
-        h3="Kosten:"
-        p="Anmeldegebühr 40€ & für jede Stundenteilnahme 4€"
-      />
-      <KurseEntries h3="Beginn des Kurses:" p="19.06.2023" />
-    </KurseItem>
-    <!--Bronze -->
-    <KurseItem titel="Bronze" svg="bronze" id="2">
-      <KurseEntries h3="Gruppengröße:" p="max. 8 Kinder" />
-      <KurseEntries
-        h3="Zielgruppe:"
-        p="Alle Kinder, die bereits das Seepferdchen erworben haben."
-      />
-      <KurseEntries
-        h3="Kosten:"
-        p="Anmeldegebühr 25€ & für jede Stundenteilnahme 4€"
-      />
-      <KurseEntries h3="Beginn des Kurses:" p="10.07.2023" />
-    </KurseItem>
+  <h2><span>Schwimmkurse</span> im Freibad Delligsen</h2>
 
-    <div class="anmeldung">
-      <p>
-        Anmeldung:
-        <a href="mailto:alice.moeller@t-online.de">
-          <Icon name="IcRoundEmail" />
-          alice.moeller@t-online.de</a
-        >
-      </p>
-      <p class="red">
-        Änderungen des Schwimmkursbeginns sind wetterbedingt m&ouml;glich!!!
-      </p>
-      <br />
-    </div>
+  <!--Seepferd -->
+  <KurseItem titel="Seepferdchen" svg="seepferd" id="1">
+    <KurseEntries h3="Gruppengröße:" p="max. 8 Kinder" />
+    <KurseEntries h3="Alter der Kinder:" p="ab 6 Jahren" />
+    <KurseEntries
+      h3="Kosten:"
+      p="Anmeldegebühr 40€ & für jede Stundenteilnahme 4€"
+    />
+    <KurseEntries h3="Beginn des Kurses:" p="19.06.2023" />
+  </KurseItem>
+  
+  <!--Bronze -->
+  <KurseItem titel="Bronze" svg="bronze" id="2">
+    <KurseEntries h3="Gruppengröße:" p="max. 8 Kinder" />
+    <KurseEntries
+      h3="Zielgruppe:"
+      p="Alle Kinder, die bereits das Seepferdchen erworben haben."
+    />
+    <KurseEntries
+      h3="Kosten:"
+      p="Anmeldegebühr 25€ & für jede Stundenteilnahme 4€"
+    />
+    <KurseEntries h3="Beginn des Kurses:" p="10.07.2023" />
+  </KurseItem>
+
+  <div class="anmeldung">
+    <p>
+      Anmeldung:
+      <a href="mailto:alice.moeller@t-online.de">
+        <Icon name="IcRoundEmail" />
+        alice.moeller@t-online.de</a
+      >
+    </p>
+    <p class="red">
+      Änderungen des Schwimmkursbeginns sind wetterbedingt m&ouml;glich!!!
+    </p>
+    <br />
   </div>
 </section>
 
@@ -55,32 +53,25 @@ import KurseItem from "./KurseItem.astro";
     width: 100%;
     margin-inline: auto;
   }
-  
-  .titelh2 {
+
+  h2 {
     color: var(--text);
-    padding-block: 5rem;
+    padding-block: 3rem;
     text-align: center;
     font-size: 20pt;
     letter-spacing: -1px;
     font-weight: 700;
+    font-size: clamp(2.2rem, 1.4551rem + 1.3061vw, 2.7rem);
   }
   span {
     background: linear-gradient(120deg, var(--primary), var(--accent));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
-  .HomeWhite {
-    background-color: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    vertical-align: middle;
-    padding-bottom: 10vh;
-  }
 
   .anmeldung {
     margin-top: 30px;
-    width: fit-content;
+    width: 100%;
     margin-inline: 1rem;
     text-align: center;
   }
