--- a/src/components/Kurse/KurseItem.astro
+++ b/src/components/Kurse/KurseItem.astro
@@ -4,69 +4,64 @@ const { titel, svg, id } = Astro.props;
 ---
 
 <div class="card">
-  <h2 class="title">{titel}</h2>
-
-
+  <h2>{titel}</h2>
 
   <div class="kurseFab" id={id + "fab"}>
-        <div class="dot one"><br></div>
-        <div class="dot two"><br></div>
-        <div class="dot three"><br></div>
-        <div class="dot four"><br></div>
-        <div class="dot five"><br></div>
-        <div class="dot six"><br></div>
-        <div class="dot seven"><br></div>
-        <div class="dot eight"><br></div>
-        <div class="dot nine"><br></div>
-        <div class="dot ten"><br></div>
-        <div class="dot eleven"><br></div>
-        <div class="dot twelve"><br></div>
-        <div class="dot thirteen"><br></div>
-        <div class="dot fourteen"><br></div>
-        <div class="dot fifteen"><br></div>
-        <div class="dot sixteen"><br></div>
-        <div class="dot seventeen"><br></div>
-        <div class="dot eighteen"><br></div>
-        <div class="dot nineteen"><br></div>
-        <div class="dot twenty"><br></div>
+    <div class="dot one"><br /></div>
+    <div class="dot two"><br /></div>
+    <div class="dot three"><br /></div>
+    <div class="dot four"><br /></div>
+    <div class="dot five"><br /></div>
+    <div class="dot six"><br /></div>
+    <div class="dot seven"><br /></div>
+    <div class="dot eight"><br /></div>
+    <div class="dot nine"><br /></div>
+    <div class="dot ten"><br /></div>
+    <div class="dot eleven"><br /></div>
+    <div class="dot twelve"><br /></div>
+    <div class="dot thirteen"><br /></div>
+    <div class="dot fourteen"><br /></div>
+    <div class="dot fifteen"><br /></div>
+    <div class="dot sixteen"><br /></div>
+    <div class="dot seventeen"><br /></div>
+    <div class="dot eighteen"><br /></div>
+    <div class="dot nineteen"><br /></div>
+    <div class="dot twenty"><br /></div>
     <Icon name="IcRoundExpandMore" />
   </div>
-
-
-
 
   <div class="kurseImg">
     <Icon name={svg} />
   </div>
   <div class="kurseCont" id={id + "Cont"}>
-    <div>
-      <slot />
-    </div>
+    <slot />
   </div>
 </div>
 
 <style>
   .card {
     border-radius: var(--border-radius);
-    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 20px 0 rgba(0, 0, 0, 0.19);
-    max-width: 1300px;
+    box-shadow:
+      0 1px 3px 0 rgba(0, 0, 0, 0.02),
+      0 0 0 1px rgba(27, 31, 35, 0.15);
     display: grid;
     grid-template-columns: 2fr 3fr;
     grid-template-rows: auto 1fr;
-    width: fit-content;
     grid-template-areas: "titel titel" "img content";
+    padding-block: 1rem;
+    gap: 2rem 0;
     margin-block: 1rem;
     display: grid;
     grid-template-rows: auto 1fr;
   }
 
-  .title {
+  h2 {
     grid-area: titel;
     text-align: center;
     color: var(--text);
     margin-top: 2rem;
-    font-size: 25pt;
-    font-weight: 600;
+    font-size: clamp(1.7rem, 1.4551rem + 1.3061vw, 2.5rem);
+    font-weight: 500;
   }
 
   .kurseImg {
@@ -86,15 +81,16 @@ const { titel, svg, id } = Astro.props;
     display: none;
   }
   .kurseCont {
-    padding: 1rem;
-    display: flex;
-    align-items: center;
+    padding-inline: 1rem;
+    display: grid;
+    gap: 1.5rem;
+    align-content: center;
     grid-area: content;
   }
 
   @media only screen and (max-width: 530px) {
-    .titel {
-      margin-top: 5%;
+    h2 {
+      margin: 0;
     }
     .kurseCont {
       max-height: 0;
@@ -107,11 +103,11 @@ const { titel, svg, id } = Astro.props;
       display: block;
       width: 56px;
       height: 56px;
-      margin: 20px auto;
+      margin-inline: auto;
       color: var(--secondary);
       background-color: transparent;
       padding: 10px;
-      transition: all 0.75s cubic-bezier(.71,0,.33,1.56) 0ms;
+      transition: all 0.75s cubic-bezier(0.71, 0, 0.33, 1.56) 0ms;
     }
     .expandedFAB {
       transform: rotate(180deg);
@@ -123,6 +119,7 @@ const { titel, svg, id } = Astro.props;
       opacity: 1;
     }
     .card {
+      gap: 1.5rem;
       grid-template-columns: 1fr;
       grid-template-rows: 1fr auto auto auto;
       grid-template-areas: "img" "titel" "fab" "content";
@@ -134,7 +131,6 @@ const { titel, svg, id } = Astro.props;
     }
   }
 
-
   [astro-icon="IcRoundExpandMore"] {
     position: absolute;
     top: 0;
@@ -143,83 +139,83 @@ const { titel, svg, id } = Astro.props;
     width: 36px;
     z-index: 1;
   }
-  
+
   .dot {
-        position: absolute;
-        transform: rotate(0deg);
-        top: 0;
-        left: 0;
-        opacity: 0.1;
-        display: block;
-      width: 56px;
-      height: 56px;
-      background-color: var(--primary);
-      color: var(--secondary);
-      border-radius: var(--border-radius);
-      padding: 10px;
-        transition: all 0.75s cubic-bezier(.71,0,.33,1.56) 0ms;
-      }
+    position: absolute;
+    transform: rotate(0deg);
+    top: 0;
+    left: 0;
+    opacity: 0.1;
+    display: block;
+    width: 56px;
+    height: 56px;
+    background-color: var(--primary);
+    color: var(--secondary);
+    border-radius: var(--border-radius);
+    padding: 10px;
+    transition: all 0.75s cubic-bezier(0.71, 0, 0.33, 1.56) 0ms;
+  }
 
-      .expandedFAB .dot {
-        transform: rotate(180deg);
-        border-radius: 50%;
-      }
+  .expandedFAB .dot {
+    transform: rotate(180deg);
+    border-radius: 50%;
+  }
 
-.dot.two {
-        transition-delay: 3ms;
-      }
-      .dot.three {
-        transition-delay: 6ms;
-      }
-      .dot.four {
-        transition-delay: 9ms;
-      }
-      .dot.five {
-        transition-delay: 11ms;
-      }
-      .dot.six {
-        transition-delay: 14ms;
-      }
-      .dot.seven {
-        transition-delay: 17ms;
-      }
-      .dot.eight {
-        transition-delay: 20ms;
-      }
-      .dot.nine {
-        transition-delay: 23ms;
-      }
-      .dot.ten {
-        transition-delay: 26ms;
-      }
-      .dot.eleven {
-        transition-delay: 29ms;
-      }
-      .dot.twelve {
-        transition-delay: 32ms;
-      }
-      .dot.thirteen {
-        transition-delay: 35ms;
-      }
-      .dot.fourteen {
-        transition-delay: 38ms;
-      }
-      .dot.fifteen {
-        transition-delay: 41ms;
-      }
-      .dot.sixteen {
-        transition-delay: 44ms;
-      }
-      .dot.seventeen {
-        transition-delay: 47ms;
-      }
-      .dot.eighteen {
-        transition-delay: 50ms;
-      }
-      .dot.nineteen {
-        transition-delay: 53ms;
-      }
-      .dot.twenty {
-        transition-delay: 56ms;
-      }
+  .dot.two {
+    transition-delay: 3ms;
+  }
+  .dot.three {
+    transition-delay: 6ms;
+  }
+  .dot.four {
+    transition-delay: 9ms;
+  }
+  .dot.five {
+    transition-delay: 11ms;
+  }
+  .dot.six {
+    transition-delay: 14ms;
+  }
+  .dot.seven {
+    transition-delay: 17ms;
+  }
+  .dot.eight {
+    transition-delay: 20ms;
+  }
+  .dot.nine {
+    transition-delay: 23ms;
+  }
+  .dot.ten {
+    transition-delay: 26ms;
+  }
+  .dot.eleven {
+    transition-delay: 29ms;
+  }
+  .dot.twelve {
+    transition-delay: 32ms;
+  }
+  .dot.thirteen {
+    transition-delay: 35ms;
+  }
+  .dot.fourteen {
+    transition-delay: 38ms;
+  }
+  .dot.fifteen {
+    transition-delay: 41ms;
+  }
+  .dot.sixteen {
+    transition-delay: 44ms;
+  }
+  .dot.seventeen {
+    transition-delay: 47ms;
+  }
+  .dot.eighteen {
+    transition-delay: 50ms;
+  }
+  .dot.nineteen {
+    transition-delay: 53ms;
+  }
+  .dot.twenty {
+    transition-delay: 56ms;
+  }
 </style>
