--- a/src/components/Nav/NavItem.astro
+++ b/src/components/Nav/NavItem.astro
@@ -79,10 +79,12 @@ import { Icon } from "astro-icon";
   }
   @media screen and (max-width: 1270px) {
     a {
-      margin-left: 24px;
       border-radius: 16px;
       align-items: center;
       font-size: 22px;
+      display: flex;
+      margin: 0.7rem 0;
+      gap: 1rem;
     }
   }
   @media screen and (max-width: 500px) {
@@ -95,7 +97,6 @@ import { Icon } from "astro-icon";
     }
     a {
       background-color: rgba(255, 255, 255, 0);
-      margin-left: 24px;
       align-items: center;
       font-size: x-large;
       color: var(--text);
@@ -111,7 +112,6 @@ import { Icon } from "astro-icon";
 
     a {
       background-color: rgba(255, 255, 255, 0);
-      margin-left: 24px;
       padding: 16px, 16px;
       border-radius: 16px;
       align-items: center;
