--- a/src/components/impressum/LizenzenGrid.astro
+++ b/src/components/impressum/LizenzenGrid.astro
@@ -94,6 +94,7 @@ import { Icon } from "astro-icon";
 <style>
   .grid {
     margin-top: 2rem;
+    width: 100%;
     color: var(--text);
     display: grid;
     max-width: 1500px;
