--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ import Countdown from "../components/Countdown.astro";
         classes="transition-fade primary"
       />
       <Verlinkung
-        href="/veranstaltungen/"
-        label="Arbeitseinsätze"
+        href="/job/"
+        label="Ferienjob"
         classes="transition-fade secondary"
       />
     </div>
