--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,35 +2,56 @@
 import { Icon } from "astro-icon";
 ---
 
-<footer>
-  <div class="social">
-    <a class="a" href="/rss/" aria-label="Folgt uns via RSS"
-      ><div><Icon name="IcRoundRssFeed" /><span class="footerLink">RSS</span></div></a
-    >
-    <a
-      class="a"
-      target="_blank"
-      href="https://www.instagram.com/freibad_delligsen/"
-      aria-label="Folgt uns auf Instagram"
-      ><div><Icon name="instagram" /><span class="footerLink">Instagram</span></div></a
-    >
-    <a
-      class="a"
-      target="_blank"
-      href="https://www.facebook.com/Freibad.Delligsen/"
-      aria-label="Folgt uns auf Facebook"
-      ><div><Icon name="facebook" /><span class="footerLink">Facebook</span></div></a
-    >
+<footer class="content-grid">
+  <div>
+    <div class="logo">
+      <Icon name="freibadLogo" />
+      <h4>Freibad Delligsen</h4>
+    </div>
+    <div class="link">
+      <a href="/mitglied/">Vereinsmitglied werden</a>
+      <a href="/job/">Ferienjob</a>
+    </div>
+
+    <div class="link">
+      <a href="/ueber/">&Uuml;ber unsere Geschichte</a>
+      <a href="/impressum/">Impressum</a>
+      <a href="/documents/Datenschutzerklärung.pdf" target="_blank"
+        >Datenschutz</a
+      >
+    </div>
   </div>
-  <div class="link">
-    <a href="/impressum/">Impressum</a>
-    <a href="/documents/Datenschutzerklärung.pdf" target="_blank">Datenschutz</a
-    >
-    <a href="/ueber/">&Uuml;ber uns</a>
+  <hr />
+  <div class="full-width">
+    <div class="social">
+      <a class="a" href="/rss/" aria-label="Folgt uns via RSS"
+        ><div>
+          <Icon name="IcRoundRssFeed" /><span class="footerLink">RSS</span>
+        </div>
+      </a>
+      <a
+        class="a"
+        target="_blank"
+        href="https://www.instagram.com/freibad_delligsen/"
+        aria-label="Folgt uns auf Instagram"
+        ><div>
+          <Icon name="instagram" /><span class="footerLink">Instagram</span>
+        </div>
+      </a>
+      <a
+        class="a"
+        target="_blank"
+        href="https://www.facebook.com/Freibad.Delligsen/"
+        aria-label="Folgt uns auf Facebook"
+        ><div>
+          <Icon name="facebook" /><span class="footerLink">Facebook</span>
+        </div>
+      </a>
+    </div>
+    <p>
+      &copy; <span id="copyright"></span> F&ouml;rderverein Freibad Delligsen
+    </p>
   </div>
-  <p>
-    &copy; <span id="copyright"></span> F&ouml;rderverein Freibad Delligsen
-  </p>
 </footer>
 
 <script>
@@ -78,7 +99,6 @@ import { Icon } from "astro-icon";
   @media screen and (max-width: 600px) {
     .social {
       flex-direction: column;
-      align-items: center;
     }
     .a {
       width: 200px;
@@ -87,7 +107,7 @@ import { Icon } from "astro-icon";
 
   a div {
     height: 56px;
-    margin: 8px;
+    margin: 8px 16px 8px 0;
     padding: 16px;
     background-color: var(--primary);
     border-radius: var(--border-radius);
@@ -105,49 +125,102 @@ import { Icon } from "astro-icon";
   }
 
   footer {
-    text-align: center;
     background-color: var(--secondary);
     margin-top: 3rem;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    box-shadow:
+      rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+      rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     display: grid;
+    gap: 4rem 0;
+    padding-block: 4rem;
+  }
+
+  footer > div:first-of-type {
+    display: flex;
     gap: 2rem;
-    padding-block: 2rem;
+    justify-content: space-between;
+  }
+  @media (width < 830px) {
+    footer > div:first-of-type {
+      display: grid;
+    }
   }
 
   .link,
   .social {
     display: flex;
+  }
+
+  .social {
     justify-content: center;
   }
 
   .link {
     flex-wrap: wrap;
+    flex-direction: column;
   }
 
   .link a {
+    display: inline-block;
+    width: fit-content;
     color: var(--text);
-    display: inline;
-    padding: 0.2rem 1rem;
-    font-size: 15pt;
-    transition: color 1s ease;
+    font-size: 1.3rem;
+    transition: color 0.3s ease;
     transform-origin: left;
   }
 
-  .link a:hover {
-    color: var(--primary);
+  .link span {
+    font-weight: 600;
+    font-size: 1.4rem;
   }
 
   p {
-    text-align: center;
-    width: 100%;
     color: color-mix(in oklab, var(--accent), black);
     font-size: larger;
-    padding: 1%;
+    margin-top: 1rem;
+    text-align: center;
   }
 
-  @media screen and (min-width: 1000px) {
-    p {
-      padding: 10px;
-    }
+  .logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .logo [astro-icon="freibadLogo"] {
+    display: block !important;
+    fill: var(--primary-dark);
+    width: min(5rem, 100px) !important;
+    height: min(3.5rem, 80px) !important;
+  }
+
+  .logo h4 {
+    color: var(--primary-dark);
+    font-size: 18pt;
+    font-weight: 700;
+    letter-spacing: -1px;
+  }
+
+  .link a {
+    text-decoration: none;
+    background-image: linear-gradient(
+      120deg,
+      var(--primary),
+      color-mix(in oklab, var(--primary) 20%, var(--accent)),
+      var(--accent) 100%
+    );
+    background-size: 0% 3px;
+    background-position: left 1.4em;
+    background-repeat: no-repeat;
+    padding-block-end: 0.25em;
+    transition:
+      color 500ms,
+      background-size 500ms;
+  }
+
+  .link a:hover,
+  .link a:focus {
+    color: var(--primary);
+    background-size: 100% 3px;
   }
 </style>
