--- a/src/components/Accordion/Accordion.astro
+++ b/src/components/Accordion/Accordion.astro
@@ -9,8 +9,8 @@ import Fußball from "@assets/images/accordion/Fußball.jpg";
 import Volleyball from "@assets/images/accordion/Volleyball.jpg";
 ---
 
-<div class="wrapper">
-  <div class="accordion" id="accordion">
+<div class="wrapper breakout">
+  <div class="accordion breakout" id="accordion">
     <AccordionItem 
       src={pool}
       icon="IcRoundPool"
@@ -85,7 +85,6 @@ import Volleyball from "@assets/images/accordion/Volleyball.jpg";
     padding: 1rem;
 
     width: 100%;
-    max-width: var(--site-width);
 
     /* demo only */
     padding-block: 5rem;
