--- a/src/components/Index/Verlinkung.astro
+++ b/src/components/Index/Verlinkung.astro
@@ -11,6 +11,7 @@ const { href, label, classes } = Astro.props as Props;
 
 <style>
   button {
+    cursor: pointer;
     margin: 0 16px;
     transition: all 0.2s ease-in;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
